<resources>
    <string name="app_name">AzimoNote</string>

    <string name="message_dialog_confirm">Confirm</string>
    <string name="progress_dialog_message">Please wait…</string>
    <string name="decision_dialog_yes">Yes</string>
    <string name="decision_dialog_no">No</string>

    <string name="welcome_screen_title">Welcome</string>
    <string name="welcome_header">Welcome to Azimo Note!</string>
    <string name="welcome_message">Example project created in order to show possibilities of AutomationTestSupervisor testing tool.</string>
    <string name="welcome_btn_login">Login</string>
    <string name="welcome_btn_register">Register</string>

    <string name="login_screen_title">Login</string>
    <string name="login_btn_login">Login</string>
    <string name="login_btn_register">No account yet? Create one</string>
    <string name="login_hint_password">Password</string>
    <string name="login_hint_email">Email</string>
    <string name="login_error_incorrect_email">Invalid e-mail</string>
    <string name="login_error_empty_email">E-mail field cannot be empty</string>
    <string name="login_error_empty_password">Password field cannot be empty</string>

    <string name="register_screen_title">Register</string>
    <string name="register_btn_register">Register</string>
    <string name="register_btn_login">Already have an account? Login</string>
    <string name="register_hint_password">Password</string>
    <string name="register_hint_email">Email</string>
    <string name="register_error_incorrect_email">Invalid e-mail</string>
    <string name="register_error_empty_email">E-mail field cannot be empty</string>
    <string name="register_error_empty_password">Password field cannot be empty</string>

    <string name="notes_screen_title">Notes</string>
    <string name="notes_adapter_item_placeholder">---</string>
    <string name="notes_menu_button_logout">Logout</string>
    <string name="notes_dialog_logout_prompt">Are you sure?</string>

    <string name="add_note_screen_title">Add note</string>
    <string name="add_note_button">Save</string>
    <string name="add_note_hint">Type message…</string>

</resources>
